         similar to Fuse (patch #3061430) (Sergio Baldovi).
20100929 test/test.c,z80.c: ensure last OUT to 0x1ffd is serialised into .z80
         files (fixes bug #3078262; thanks, Nick Corey).
20100930 test/plus3.z80: remember to add test file.
20100930 ChangeLog,README: first updates for a "1.0" release.
20101002 configure.in,szx.c,test/{empty.szx,test.c}: check for SZX files
         written with A and F swapped and read them in appropriately. Bump
         libspectrum version number so we know that new files are written
         without the bug.
20101003 szx.c,test/{empty.szx,test.c}: we also need to swap A' and F'.
20101010 configure.in: pad version number for Win32 if needed (patch #3084574)
         (Sergio Baldovi).
20101129 ChangeLog,README,doc/libspectrum.{3,txt}: more 1.0 updates.
20101130 warajevo_read.c: remove potential signedness problem.
20101130 Makefile.am,configure.in: bump version numbers for 1.0 release.
20101216 README,configure.in,doc/libspectrum.3: bump version numbers and dates
         for 1.0.0 release.
20101216 ChangeLog: update date here as well.
20101216 test/Makefile.am: ensure all test files are distributed.
20101217 Makefile.am: mark windres.rc as a source file so it is distributed
         (thanks, Guesser).
20110120 make-perl.c,myglib/ghash.c: add the g_hash_table_foreach() function and
         update g_hash_table_new() function to support the
         g_hash_table_new( NULL, NULL ) syntax (patch #3160211) (Sergio
         Baldovi).
20110130 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for SpecDrum in SZX snapshots (patch #3164313) (Jon
         Mitchell).
20110131 sna.c,z80.c: note info loss of SpecDrum info when writing sna or z80
         format snapshots (Fred).
20110327 configure.in: allow the user to say they do not want to use windres
         (works around bug #3248008; thanks, Cygnus).
20110405 libspectrum.h.in: add missing WIN32_DLL (Stuart).